<resources>
    <string name="app_name">푸디 관리자</string>
    <string name="search">검색</string>
    <string name="header_title">푸디 관리자 페이지 입니다</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="food_name">음식이름</string>
    <string name="calorie">칼로리</string>
    <string name="carbohydrate">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="sugar">당류</string>
    <string name="salt">나트륨</string>
    <string name="cholesterol">콜레스테롤</string>
    <string name="saturated_fat">포화지방</string>
    <string name="trans_fat">트랜스지방</string>
    <string name="company">회사이름</string>
    <string name="serving_size">1회 제공량</string>
    <string name="modify">수정하기</string>
    <string name="delete">삭제하기</string>

    <!-- Network -->
    <string name="response_fail">통신에 실패하였습니다.</string>
    <string name="delete_success">성공적으로 삭제하였습니다.</string>
    <string name="modify_success">성공적으로 수정하였습니다.</string>
    <string name="empty_list">검색 결과가 존자해지 않습니다.</string>
    <string name="socket_timeout">서버와 통신 제한 시간이 지났습니다. 다시 시도해주세요</string>
</resources>