<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="searchViewModel"
            type="com.lee.foodiadmin.ui.activity.search.viewmodel.SearchActivityViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.search.SearchActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            android:elevation="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RelativeLayout
            android:id="@+id/headerTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchTextView"
            android:background="@color/main_color"
            >
            <ImageView
                android:id="@+id/headerLogoImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher_monochrome"
                />

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/header_title"
                android:fontFamily="@font/swagger"
                android:textColor="@color/text_color"
                android:background="@color/main_color"
                android:textSize="25sp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/searchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerTitleLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/text_color"
            android:text="@string/search"
            android:fontFamily="@font/swagger"
            android:textSize="20sp"
            android:padding="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchTextView"
            app:endIconDrawable="@drawable/ic_baseline_search_24"
            app:endIconMode="custom"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_textview"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@={searchViewModel.searchText}"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchFoodRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout"
            app:layout_constraintBottom_toTopOf="@id/buttonLayout"
            android:layout_margin="20dp"
            tools:listitem="@layout/search_item"
            />
        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchFoodRecyclerView"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <Button
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_margin="10dp"
                android:text="@string/previous"
                android:fontFamily="@font/swagger"
                android:enabled="false"
                />
            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:text="@string/next"
                android:fontFamily="@font/swagger"
                android:enabled="false"
                />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

